force-app/main/default/objects/Clause_Filtering_Criteria__c.object
<CustomObject>
    <description>Used to capture conditions that need to be met so the clause is automatically added to the offer (quote)</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Use to enable or disable the criteria</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Clause__c</fullName>
        <description>Link to the clause using this criteria</description>
        <label>Clause</label>
        <referenceTo>APXT_Redlining__Clause__c</referenceTo>
        <relationshipName>Filtering_Criteria</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Field__c</fullName>
        <description>Fields used to create the filter criteria</description>
        <label>Field</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Object_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Application_Course_Preference__r.Course_Code__c</fullName>
                    <label>Course Code</label>
                </value>
                <value>
                    <fullName>SBQQ__Quote__r.SBQQ__PrimaryContact__r.Country_of_Residence__c</fullName>
                    <label>Country of Residence</label>
                </value>
                <value>
                    <fullName>SBQQ__Quote__r.SBQQ__PrimaryContact__r.Country_of_Citizenship__c</fullName>
                    <label>Country of Citizenship</label>
                </value>
                <value>
                    <fullName>Course_Year_Later_Than_Application_Year__c</fullName>
                    <label>Previous Year Fee Used</label>
                </value>
                <value>
                    <fullName>Application_Course_Preference__r.Credit_Assessment_Decision__c</fullName>
                    <label>RPL Assessment Status</label>
                </value>
                <value>
                    <fullName>SBQQ__Quote__r.SBQQ__PrimaryContact__r.HasDisabilities__c</fullName>
                    <label>Applicant with Disabilities</label>
                </value>
                <value>
                    <fullName>SBQQ__Quote__r.SBQQ__PrimaryContact__r.Under_18__c</fullName>
                    <label>Applicant Under 18</label>
                </value>
                <value>
                    <fullName>Application_Course_Preference__r.Location_Code__c</fullName>
                    <label>Course Offering Location</label>
                </value>
                <value>
                    <fullName>Application_Course_Preference__r.Calendar_Start_Date__c</fullName>
                    <label>Calendar Start Date</label>
                </value>
                <value>
                    <fullName>Application_Course_Preference__r.Managing_Faculty__c</fullName>
                    <label>Managing Faculty</label>
                </value>
                <value>
                    <fullName>Application_Course_Preference__r.Course_Level__c</fullName>
                    <label>Course Level</label>
                </value>
                <value>
                    <fullName>Application_Course_Preference__r.Admission_Category__c</fullName>
                    <label>Admission Category</label>
                </value>
                <value>
                    <fullName>Application_Course_Preference__r.Course_Start_Date_Updated__c</fullName>
                    <label>Course Start Date</label>
                </value>
                <value>
                    <fullName>Application_Course_Preference__r.Recruitment_Reference_Code__c</fullName>
                    <label>Recruitment Reference Code</label>
                </value>
                <value>
                    <fullName>Application_Course_Preference__r.Unit_Set_Code__c</fullName>
                    <label>Unit Set Code</label>
                </value>
                <value>
                    <fullName>Application_Course_Preference__r.Admission_Calendar_Type__c</fullName>
                    <label>Admission Calendar Type</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Filtered_Value__c</fullName>
        <label>Filter Value</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>In_Error__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Object_Type__c</fullName>
        <description>Used to group the field filter values</description>
        <label>Object Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SBQQ__QuoteLine__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Operator__c</fullName>
        <label>Operator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>equals</fullName>
                </value>
                <value>
                    <fullName>not equals</fullName>
                </value>
                <value>
                    <fullName>contains</fullName>
                </value>
                <value>
                    <fullName>greater</fullName>
                </value>
                <value>
                    <fullName>greater or equals</fullName>
                </value>
                <value>
                    <fullName>less</fullName>
                </value>
                <value>
                    <fullName>less or equals</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>System_Log__c</fullName>
        <label>System Log</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Clause Filtering Criteria</label>
    <nameField>
        <displayFormat>FC-{000000}</displayFormat>
        <label>Criteria Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Clause Filtering Criteria</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>